force-app/main/default/objects/Opportunity_Team_Member__c/Opportunity_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Opportunity Team Member</label>
    <nameField>
        <displayFormat>OTM-{0000}</displayFormat>
        <label>OTM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>