force-app/main/default/objects/Opportunity_Team_Member__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity Team Members</relationshipLabel>
    <relationshipName>Opportunity_Team_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>