force-app/main/default/objects/Opportunity_Team_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunity Team Members</relationshipLabel>
    <relationshipName>Opportunity_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>